# mclear

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  adjustoomscore.cpp  adjustoomscore.h  cpuloadinfo.cpp  cpuloadinfo.h  daemonize.cpp  daemonize.h  diskspaceinfo.cpp  diskspaceinfo.h  linuxversion.cpp  linuxversion.h  lockmemory.cpp  lockmemory.h  main.cpp  memoryinfo.cpp  memoryinfo.h  networkinfo.cpp  networkinfo.h  uname.cpp  uname.h  utils.cpp  utils.h
proto/: CMakeLists.txt
proto/mcproto/: cpuloadinfo.proto  diskinfo.proto  infoupdate.proto  memoryinfo.proto  networkinfo.proto
server/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  clienttests.cpp
